# SceneSpot-AI

./: .gitignore  indexer.py  main.py  pyproject.toml  requirements.txt
src/: smtp_utils.py
src/frontend/: ui.html
src/static/css/: player.css
src/static/js/: db.js  player.js
src/templates/: upload.html
static/css/: upload.css
static/js/: upload.js
templates/: player.html
