[project]
name = "SceneSpot AI"
version = "0.1.0"
description = "SceneSpot AI is a video indexing tool that uses AI to create a searchable database of video content."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "groq>=1.0.0",
    "uvicorn>=0.40.0",
    "python-multipart",
    "jinja2",
    "python-dotenv"
]
